# CompWolf

./: .gitmodules  README.md  package-lock.json
CompWolf.Programs/Graphics.Core/: CMakeLists.txt  build.sh
CompWolf.Programs/Graphics.Core/header/: compwolf_vulkan.hpp  vulkan_debug_utils.hpp
CompWolf.Programs/Graphics.Core/include/: drawables  gpu_buffers  gpu_programs  gpu_structs  graphics_environments  shaders  simple_drawables  vulkan_drawables  vulkan_gpu_buffers  vulkan_gpu_structs  vulkan_graphics  vulkan_graphics_environments  vulkan_programs  vulkan_shaders  vulkan_sync  vulkan_windows  windows
CompWolf.Programs/Graphics.Core/include/private/drawables/: brush.hpp  drawable.hpp
CompWolf.Programs/Graphics.Core/include/private/gpu_buffers/: gpu_buffer.hpp  gpu_buffer_data.hpp
CompWolf.Programs/Graphics.Core/include/private/gpu_programs/: gpu_fence.hpp  gpu_specific_program.hpp
CompWolf.Programs/Graphics.Core/include/private/gpu_structs/: gpu_color.hpp  gpu_struct_info.hpp  new_gpu_struct_info.hpp  primitive_gpu_struct_info.hpp
CompWolf.Programs/Graphics.Core/include/private/graphics_environments/: ImplementationType.hpp  gpu_connection.hpp  gpu_map.hpp  gpu_work_type.hpp  gpu_work_type_set.hpp  graphics_boundary_classes.hpp  graphics_environment.hpp  graphics_environment_settings.hpp  input_state.hpp
CompWolf.Programs/Graphics.Core/include/private/shaders/: shader.hpp  static_shader.hpp
CompWolf.Programs/Graphics.Core/include/private/simple_drawables/: simple_brush.hpp  simple_shape.hpp  simple_square.hpp  simple_vertex_shader.hpp  single_color_pixel_shader.hpp
CompWolf.Programs/Graphics.Core/include/private/vulkan_drawables/: vulkan_brush.hpp  vulkan_brush_internal.hpp  vulkan_drawable.hpp
CompWolf.Programs/Graphics.Core/include/private/vulkan_gpu_buffers/: vulkan_gpu_buffer.hpp  vulkan_gpu_buffer_internal.hpp
CompWolf.Programs/Graphics.Core/include/private/vulkan_gpu_structs/: vulkan_gpu_struct_info.hpp
CompWolf.Programs/Graphics.Core/include/private/vulkan_graphics/: vulkan_types.hpp
CompWolf.Programs/Graphics.Core/include/private/vulkan_graphics_environments/: vulkan_boundary_classes.hpp  vulkan_gpu_connection.hpp  (+5 more)
CompWolf.Programs/Graphics.Core/resources/: CompWolf.Graphics.simple_vertex_shader.vert  CompWolf.Graphics.single_color_pixel_shader.frag
CompWolf.Programs/Graphics.Core/src/: glfw_environment.cpp  vulkan_debug_environment.cpp  vulkan_environment.cpp  vulkan_gpu_connection.cpp  vulkan_graphics_environment.cpp
CompWolf.Programs/Graphics.Core/src/shaders/: shader.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_drawables/: vulkan_brush_internal.cpp  vulkan_drawable.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_gpu_buffers/: vulkan_gpu_buffer_internal.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_graphics_environments/: glfw_environment.cpp  vulkan_debug_environment.cpp  vulkan_environment.cpp  vulkan_gpu_connection.cpp  vulkan_graphics_environment.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_programs/: vulkan_gpu_fence.cpp  vulkan_gpu_program.cpp  vulkan_gpu_program_manager.cpp  vulkan_gpu_semaphore.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_shaders/: vulkan_shader_internal.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_sync/: gpu_fence.cpp  gpu_semaphore.cpp
CompWolf.Programs/Graphics.Core/src/vulkan_windows/: vulkan_camera.cpp  vulkan_window.cpp  window_surface.cpp  window_swapchain.cpp
CompWolf.Programs/Graphics.Core/tests/: new_gpu_struct_info.cpp  test.cpp  vulkan_graphics_environment.cpp
(+175 files in other folders)
